--- a/src/.env
+++ b/src/.env
@@ -13,6 +13,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=password
 
+TEST_DB_CONNECTION=mysql
+TEST_DB_HOST=mysql_test
+TEST_DB_PORT=3306
+TEST_DB_DATABASE=laravel_test
+TEST_DB_USERNAME=root
+TEST_DB_PASSWORD=password
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
